--- a/templates/index.html
+++ b/templates/index.html
@@ -32,13 +32,20 @@
 </head>
 <body>
     <h1>Search Map</h1>
-    <form hx-post="/map" hx-target="#results" hx-swap="innerHTML">
+    <form hx-post="{{ url_for('map') }}" hx-target="#results" hx-indicator="#spinner" hx-swap="innerHTML">
         <label for="search">Enter your search:</label>
         <input type="text" id="search" name="query" placeholder="Search..." required>
         <button type="submit">Search</button>
+
     </form>
 
-    <div id="results">
+    <div hx-trigger="load" hx-post="{{ url_for('map') }}" id="results">
+
+          <embed
+    id="spinner"
+    class="htmx-indicator"
+    src="{{url_for('static', filename='spinner.svg')}}"
+  />
         <!-- Search results will be displayed here -->
     </div>
 </body>
